[package]
name = "axel"
version = "0.1.0"
edition = "2024"
default-run = "axel"

[dependencies]
oci-spec = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
nix = "0.23.2"
