[package]
name = "woody"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = "0.23.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
oci-spec = "0.6"
